# SMT

./: .gitignore  ES.csv  README.md  converter.py  pyproject.toml  smt_break.py  smt_detector.py  smt_manager.py  smt_registry.py  test.py
docs/plans/: 2026-03-10-smt-fixes-design.md  2026-03-10-smt-fixes.md  2026-03-14-historical-low-level-swing-fvg-design.md  2026-03-14-historical-low-level-swing-fvg.md  2026-03-14-historical-vectorized-smt-design.md  2026-03-14-historical-vectorized-smt.md
sample/: NQ.csv  converter.py  test.py
smt/: __init__.py  break_tracker.py  detector.py  historical.py  manager.py  registry.py
tests/: test_detector.py  test_historical.py  test_manager.py  test_registry.py
