[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "smt"
version = "0.1.0"
description = "Detect and track Smart Money Technique (SMT) divergences between correlated assets"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
]
keywords = ["trading", "smt", "divergence", "backtesting", "technical-analysis"]

[project.optional-dependencies]
dev = [
    "matplotlib",
    "pytest",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["smt*"]
